MiniWx 0.6.0: add voice, notifications and group roles